force-app/main/default/objects/Warranty_Claim__c/Warranty_Claim__c.object-meta.xml
<CustomObject>
    <description>Stores warranty claim workflow submissions and reusable workflow state.</description>
    <label>Warranty Claim</label>
    <nameField>
        <label>Warranty Claim Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Warranty Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>