force-app/main/default/objects/Warranty_Claim__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <description>Stores the invoice number associated with the purchase.</description>
    <label>Invoice Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>