force-app/main/default/objects/Warranty_Claim__c/fields/Issue_Description__c.field-meta.xml
<CustomField>
    <fullName>Issue_Description__c</fullName>
    <description>Stores the detailed issue description for the warranty claim.</description>
    <label>Issue Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>