force-app/main/default/objects/Warranty_Claim__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <description>Classifies the type of warranty issue.</description>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical Damage</fullName>
            </value>
            <value>
                <fullName>Manufacturing Defect</fullName>
            </value>
            <value>
                <fullName>Performance Issue</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>