force-app/main/default/objects/Warranty_Claim__c/fields/JSON_Data__c.field-meta.xml
<CustomField>
    <fullName>JSON_Data__c</fullName>
    <description>Stores complete workflow response data in JSON format.</description>
    <label>JSON Data</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>