force-app/main/default/objects/Warranty_Claim__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Stores the product name for the warranty claim.</description>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>