force-app/main/default/objects/Warranty_Claim__c/fields/Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Date__c</fullName>
    <description>Stores the original product purchase date.</description>
    <label>Purchase Date</label>
    <type>Date</type>
</CustomField>