force-app/main/default/objects/Warranty_Claim__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <description>Stores the product serial number.</description>
    <label>Serial Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>